# CSOT-26-Low-Latency

./: .gitignore  README.md
week-1/: 01-introduction.md  02-memory-model.md  03-memory-hierarchy.md  04-benchmarking-tools.md  05-bonus-compiler.md  README.md
week-1/project/: CMakeLists.txt  README.md  STRATEGY_SPEC.md  TROUBLESHOOTING.md
week-1/project/data/: gen.py
week-1/project/samples/: build-incorrect.sh  build-sample.sh  incorrect_strategy.cpp  spec_strategy.cpp
week-3/project/data/: gen_ticks.py
week-5/: 01-sockets-and-the-kernel-boundary.md  02-blocking-nonblocking-and-readiness.md  03-epoll-event-loop.md  04-tcp-vs-udp-and-framing.md  05-the-network-pipeline-end-to-end.md  06-bonus-kernel-bypass-and-beyond.md  README.md
week-5/project/: CMakeLists.txt  GATEWAY_SPEC.md  README.md  TROUBLESHOOTING.md
week-5/project/harness/: main.cpp
week-5/project/include/: gateway.hpp  strategy.hpp
week-5/project/samples/: gateway.stub.cpp
